[package]
name = "avrio_blockchain"
version = "0.1.0"
authors = ["Arielh25 <areilhurdle@gmail.com>", "TheDevMinerTV <tobigames200@gmail.com>"]
edition = "2018"
[lib]
name = "avrio_blockchain"
path = "src/lib.rs"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
avrio_config = { path = "../config" }
#avrio_core = { path = "../core" }
avrio_crypto = { path = "../crypto" }
