[package]
name = "avrio_blockchain"
version = "0.1.0"
authors = ["Arielh25 <areilhurdle@gmail.com>", "TheDevMinerTV <tobigames200@gmail.com>"]
edition = "2018"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
avrio_config = { path = "../config" }
avrio_core = { path = "../core" }
avrio_database = { path = "../database" }
hex = "0.4"
rand = "0.7"
log = "0.4"
ring = "0.16.11"