[package]
name = "avrio_blockchain"
version = "0.1.0"
authors = [
    "Arielh25 <areilhurdle@gmail.com>",
    "TheDevMinerTV <tobigames200@gmail.com>"
]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
avrio_config = { path = "../config" }
avrio_core = { path = "../core" }
avrio_database = { path = "../database" }
avrio_crypto = { path = "../crypto" }
hex = "0.4"
rand = "0.7"
log = "0.4"
ring = "0.16.11"
bincode = "1.2.1"
cryptonightrs = { path = "../crypto/cn-rs", package = "cryptonight-rs" }
simple_logger = "1.5.0"
merkle = "1.11.0"
bs58 = "0.3"
rocksdb = "0.13"

