[package]
name = "avrio_config"
version = "0.1.2"
authors = ["Leo Cornelius <leocornelius019@gmail.com>"]
edition = "2018"
description = "A rust libary for parsing avrio config files (.conf)"
license = "MIT"
repository = "https://github.com/avrio-project/avrio-core"
keywords = ["avrio", "crypto", "config", "parse"]
categories = ["cryptography::cryptocurrencies", "config"]
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.5.0"
log = "0.4"
[package.metadata.deb]
extended-description = ""
