[package]
name = "avrio_config"
version = "0.3.2"
authors = ["Leo Cornelius <leocornelius019@gmail.com>"]
edition = "2018"
description = "A rust libary for parsing avrio config files (.conf)"
license = "MIT"
repository = "https://github.com/avrio-project/avrio-core"
keywords = ["avrio", "crypto", "config", "parse"]
categories = ["cryptography::cryptocurrencies", "config"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.5.0"
log = "0.4"
dirs = "2.0.2"
lazy_static = "1.4.0"
rand = "0.7.3"
sha2 = "0.8.1"
hex = "0.4.2"

[package.metadata.deb]
extended-description = ""
