[package]
name = "avrio_core"
version = "0.1.0"
authors = ["Arielh25 <areilhurdle@gmail.com>", "TheDevMinerTV <tobigames200@gmail.com>"]
edition = "2018"
[lib]
name = "avrio_core"
path = "src/lib.rs"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
avrio_blockchain = { path = "../blockchain/" }
avrio_database = { path = "../database" }
