[package]
name = "avrio_core"
version = "0.1.0"
authors = ["Arielh25 <areilhurdle@gmail.com>", "TheDevMinerTV <tobigames200@gmail.com>"]
edition = "2018"
[dependencies]
ring = "0.16.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
avrio_database = { path = "../database" }
log = "0.4"
avrio_config = {path = "../config"}
hex = "0.4"
cryptonight-rs = { path ="../crypto/cn-rs"}
rand = "0.7"