[package]
name = "avrio_core"
version = "0.1.0"
authors = [
    "Arielh25 <areilhurdle@gmail.com>",
    "TheDevMinerTV <tobigames200@gmail.com>"
]
edition = "2018"
license = "MIT"

[dependencies]
ring = "0.16.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
avrio_database = { path = "../database" }
log = "0.4"
avrio_config = { path = "../config" }
hex = "0.4"
bs58 = "0.3.0"
avrio_crypto = { path = "../crypto" }
rocksdb = "0.13"
thiserror = "1.0"
simple_logger = "1.5.0"
rand = "0.7"
lazy_static = "1.4.0"
bigdecimal = "0.2.0"
bls-signatures = "0.9.0"
paired = "0.21.0"
rand_chacha = "0.3.0"
