[package]
name = "avrio-crypto"
version = "0.1.0"
authors = ["Arielh25 <areilhurdle@gmail.com>", "TheDevMinerTV <tobigames200@gmail.com>"]
edition = "2018"

[dependencys]
serde = { version = "1.0", features = ["derive"] }
arrayref = "0.3"
blake-hash = "0.3"
bincode = "1.1"
byteorder = "1.3"
c2-chacha = "0.2.2"
clear_on_drop = "0.2.3"
curve25519-dalek = { version = "1", features = ["serde"] }
digest = "0.8"
generic-array = { version = "0.13.2", features = ["serde"] }
groestl-aesni = "0.2"
hex = "0.4"
jh-x86_64 = "0.2"
keccak = "0.1" # For keccakf
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
skein-hash = "0.3"
sha3 = "0.8"
