[package]
name = "avrio_crypto"
version = "0.1.0"
authors = [
    "Leo Cornelius <leocornelius019@gmail.com>",
    "TheDevMinerTV <tobigames200@gmail.com>"
]
edition = "2018"
license = "MIT"

[dependencies]
lyra2 = "0.2.1"
bs58 = "0.3.0"
scrypt = "0.2.0"
blake = "2.0.0"
bcrypt = "0.6.3"
sha2 = "0.8.1"
ring = "0.16.12"
avrio_config = { path = "../config/" }
csv = "1.1"
vrf = "0.2.2"
primitive-types = "0.9.0"
bigdecimal = "0.2.0"
log = "0.4.14"
secp256k1 = {version = "0.20.2", features = ["rand-std", "bitcoin_hashes"]}
rand = "0.8.3"
hex = "0.4.3"