[package]
name = "avrio_db"
version = "0.1.0"
authors = ["Leo Cornelius <leocornelius019@gmail.com>", "TheDevMinerTV <tobigames200@gmail.com>"]
edition = "2018"
[lib] 
name = "avrio_db"
path = "src/lib.rs" 
[dependencys]
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.12.3"
avrio_blockchain = { path = "../blockchain/" }
avrio_core = { path = "../core/" }
avrio_config = { path = "../config/" }
