[package]
name = "avrio_database"
version = "0.1.0"
authors = ["Leo Cornelius <leocornelius019@gmail.com>", "TheDevMinerTV <tobigames200@gmail.com>"]
edition = "2018"
[dependencies]
serde_json = "1.0.48"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.12.3"
avrio_config = { path = "../config/" }
log = "0.4"