[package]
name = "avrio_database"
version = "0.1.0"
edition = "2018"
authors = ["Leo Cornelius <leocornelius019@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
serde_json = "1.0.48"
serde = { version = "1.0", features = ["derive"] }
rocksdb = "0.13"
avrio_config = { path = "../config/" }
log = "0.4"
num_cpus = "1.13.0"
