[package]
name = "avrio_id"
version = "0.1.0"
authors = ["Leo Cornelius <leocornelius019@gmail.com>", "TheDevMinerTV <tobigames200@gmail.com>"]
edition = "2018"
[lib]
name = "avrio_id"
path = "src/lib.rs"
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
avrio_blockchain = { path = "../blockchain/" }
avrio_db = { path = "../database" }
