[package]
name = "avrio_node"
version = "0.1.0"
authors = ["Leo Cornelius <leocornelius019@gmail.com>"]
edition = "2018"

[dependencies]
avrio_core = { path = "../core" }
avrio_p2p = { path = "../p2p" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
log = "0.4.8"
avrio_blockchain = { path = "../blockchain"}
avrio_config = "0.3.4"