[package]
name = "avrio_p2p"
version = "0.1.0"
authors = [
    "Arielh25 <areilhurdle@gmail.com>",
    "TheDevMinerTV <tobigames200@gmail.com>"
]
edition = "2018"

[dependencies]
avrio_config = { path = "../config" }
avrio_database = { path = "../database" }
avrio_blockchain = { path = "../blockchain" }
avrio_core = { path = "../core" }
hex = "0.4"
log = "~0.4"
rand = "~0.7.3"
serde = "~1.0.82"
serde_derive = "1.0.104"
serde_json = "~1.0.33"
unwrap = "~1.2.1"
simple_logger = "1.5.0"
rocksdb = "0.13"
