[package]
name = "avrio_p2p"
version = "0.1.0"
authors = [
    "Arielh25 <areilhurdle@gmail.com>",
    "TheDevMinerTV <tobigames200@gmail.com>"
]
edition = "2018"

[dependencies]
avrio_config = { path = "../config" }
avrio_database = { path = "../database" }
avrio_blockchain = { path = "../blockchain" }
avrio_core = { path = "../core" }
avrio_crypto = { path = "../crypto" }
log = "~0.4"
rand = "~0.7.3"
serde = "~1.0.82"
serde_derive = "1.0.104"
bson = "0.14"
unwrap = "~1.2.1"
simple_logger = "1.5.0"
lazy_static = "1.4"
x25519-dalek = "0.6.0"
rand_os = "0.2.2"
hex = "0.4.2"
rust_crypto = { package = "rust-crypto", version = "^0.2" }
