[package]
name = "avrio_rpc"
version = "0.1.0"
authors = [
    "Leo Cornelius <leocornelius019@gmail.com>",
    "TheDevMinerTV <tobigames200@gmail.com>"
]
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.104"
lazy_static = "1.4.0"
avrio_core = { path = "../core" }
